# robo

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/robot_brain/lib/robot_brain/: ear
install/robot_brain/share/robot_brain/: package.sh
install/robot_interfaces/share/robot_interfaces/: local_setup.bash  local_setup.dsv  local_setup.fish  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/robot_interfaces/share/robot_interfaces/cmake/: export_robot_interfaces__rosidl_generator_cExport.cmake  export_robot_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_robot_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  robot_interfacesConfig-version.cmake  robot_interfacesConfig.cmake  robot_interfaces__rosidl_typesupport_cExport.cmake  robot_interfaces__rosidl_typesupport_cppExport.cmake  robot_interfaces__rosidl_typesupport_introspection_cExport.cmake  robot_interfaces__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_aggregate_target-extras.cmake
install/robot_interfaces/share/robot_interfaces/msg/: Position.idl
log/: latest_build
src/backend/: main.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/robot_brain/: package.xml  setup.py
src/robot_brain/robot_brain/: gripper_srv.py  planner.py
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/msg/: BatteryState.msg  DetectedObject.msg  InventoryItem.msg  RobotState.msg  Shelf.msg  Task.msg
src/robot_interfaces/srv/: GetRobotState.srv  OpenGripper.srv
(+23 files in other folders)
